# occam-API

./: .env.example  .gitignore  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain  typescript
.github/workflows/: foundry-test.yml  prove.yml
BimaOccumPutCall/: Cargo.toml
BimaOccumPutCall/src/: main.rs
Icr/: Cargo.toml
Icr/src/: main.rs
Liquid/: Cargo.toml
Liquid/src/: main.rs
Real_time_ltv/: Cargo.toml
Real_time_ltv/src/: main.rs
Xrp_balance/: Cargo.toml
Xrp_balance/src/: main.rs
Xrp_tx/: Cargo.toml
Xrp_tx/src/: main.rs
contracts/: README.md
contracts/src/: Fibonacci.sol
contracts/src/fixtures/: groth16-fixture.json
contracts/test/: Fibonacci.t.sol
doge_tx/: Cargo.toml
doge_tx/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
user_balance/: Cargo.toml
user_balance/src/: main.rs
