[package]
name = "fibonacci-script"
version = "0.1.0"
edition = "2021"
default-run = "fibonacci"

[[bin]]
name = "fibonacci"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
# SP1 SDK
sp1-sdk = "5.1.0"
bincode = "1.3"

# Serialization
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc"] }
anyhow = "1.0"

# Async web framework
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.37", features = ["full"] }

actix-web = "4"

# HTTP client for fetching BTC price
reqwest = { version = "0.11", features = ["json"] }

# Logging & CLI utilities
tracing = "0.1.40"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive", "env"] }

# Utility libraries for hex encoding and dotenv support
hex = "0.4.3"
dotenv = "0.15.0"

# Local library for business logic (fibonacci-lib)
fibonacci-lib = { path = "../lib" }

# Optional EVM support (Plonk/Groth16)
alloy-sol-types = { workspace = true }

[build-dependencies]
sp1-build = "5.1.0"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"